--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -1,2 +1,8 @@
-[filter_remote]
-https://whatshub.top/rewrite/Price.conf
+hostname = trade-acs.m.taobao.com,api.m.jd.com, draw.jdfcloud.com, jdjoy.jd.com
+
+# 京东历史价格
+http-response ^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig|basicConfig) requires-body=1,script-path=https://service.2ti.st/QuanX/Script/jd_tb_price/main.js, tag=京东历史价格
+
+# 淘宝比价
+http-request ^http://.+/amdc/mobileDispatch script-path=https://service.2ti.st/QuanX/Script/jd_tb_price/main.js, requires-body=true, timeout=10, tag=淘宝历史价格1
+http-response ^https?://trade-acs\.m\.taobao\.com/gw/mtop\.taobao\.detail\.getdetail script-path=https://service.2ti.st/QuanX/Script/jd_tb_price/main.js, requires-body=true, timeout=10, tag=淘宝历史价格2
